--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "fractal mind map",
   "scripts": {
     "start": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "postbuild": "shx cp -r js dist/js"
   },
   "keywords": [],
   "author": "satellitecomponent",
@@ -19,9 +20,10 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.6.0",
     "typescript": "^5.1.3",
-    "vite": "^2.9.16"
+    "vite": "^2.9.16",
+    "shx": "^0.3.3"
   },
   "dependencies": {
-    "@mlc-ai/web-llm": "^0.2.1"
+    "@mlc-ai/web-llm": "^0.2.4"
   }
 }
