Cellular Automata Update (Major)
- Added two new tools for automating node placement. (Cellular Automata Manager and Node Placement Strategy)
-  resolve #41 by switching to ollama
- Unified node.js backend.
- Custom right click behavior.
- initial neural network file
- dummy ai for testing purposes
- Ensure all calls to ai apis use the agnostic function.
- Node Action Interface to coordinate interaction with nodes via UUID
-various fixes and improvements.
-Refactoring of files.

--- a/Localhost Servers/automation/package.json
+++ b/Localhost Servers/automation/package.json
@@ -2,14 +2,14 @@
   "name": "neurite-automation",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "automation.js",
   "scripts": {
-    "start": "node NeuriteAutomation.js"
+    "start": "node automation.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "playwright": "^1.40.0"
+    "playwright": "1.42.1"
   }
 }
