--- a/Localhost Servers/ai-proxy/package.json
+++ b/Localhost Servers/ai-proxy/package.json
@@ -10,7 +10,8 @@
     "axios": "^1.6.7",
     "express": "^4.18.2",
     "cors": "^2.6.5",
-    "dotenv": "16.4.5"
+    "dotenv": "16.4.5",
+    "cheerio": "1.0.0-rc.12"
   },
   "keywords": [],
   "author": "satelliteComponent",
