Fixes for Safari/Mac
Restore trackpad zoom controls.

Ensure right click is not closed when over a node on trackpad.

Ensure drophandler covers the screen.

Add file input on right click.
Fixes issue #49

Fix markdown and text file drops

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "fractal mind map",
   "scripts": {
     "start": "vite",
+    "start:host": "vite --host",
     "build": "vite build",
     "postbuild": "shx cp -r js dist/js"
   },
