--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "author": "satellitecomponent",
   "license": "ISC",
   "devDependencies": {
-    "vite": "^2.9.16",
-    "shx": "^0.3.3"
+    "shx": "^0.3.3",
+    "vite": "^5.4.8"
   },
   "dependencies": {
   }
