--- a/localhost_servers/webscrape/package.json
+++ b/localhost_servers/webscrape/package.json
@@ -16,6 +16,9 @@
     "pdf-parse": "^1.1.1",
     "sqlite3": "^5.1.6"
   },
+  "overrides": {
+    "glob": "^11.0.1"
+  },
   "keywords": [],
   "author": "",
   "license": "MIT"
