--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
   "author": "satellitecomponent",
   "license": "ISC",
   "devDependencies": {
-    "shx": "^0.3.3",
-    "vite": "^5.4.8"
+    "vite": "^6.1.1",
+    "shx": "^0.3.3"
   },
   "dependencies": {
+  },
+  "overrides": {
+    "glob": "^11.0.1",
+    "vite": {
+      "esbuild": "^0.25.0"
+    }
   }
 }
