--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "electron": "^34.0.1",
     "electron-builder": "^25.1.8"
   },
+  "overrides": {
+    "glob": "^11.0.1"
+  },
   "build": {
     "appId": "com.satellitecomponent.neurite",
     "productName": "Neurite",
