--- a/localhost_servers/wolfram-alpha/package.json
+++ b/localhost_servers/wolfram-alpha/package.json
@@ -13,11 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.6",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6",
-    "imagemagick": "^0.1.3",
-    "node-fetch": "^2.6.9",
-    "sharp": "^0.32.1"
+    "express": "^4.21.2"
   }
 }
