--- a/.github/workflows/server-release.yml
+++ b/.github/workflows/server-release.yml
@@ -17,15 +17,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Git identity
-        run: |
-          git config --global user.name "neurite-bot"
-          git config --global user.email "bot@satellitecomponent.dev"
-
       - name: Delete existing release and tag (if they exist)
         run: |
           gh release delete servers-latest -y || echo "No existing release to delete"
-          git push origin --delete servers-latest || echo "No existing tag to delete"
+          # Note: gh release delete removes the tag too, so we don’t need to manually delete it
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -33,11 +28,6 @@ jobs:
         run: |
           mkdir release
           git ls-files localhost_servers | zip -@ release/servers.zip
-
-      - name: Create new tag servers-latest
-        run: |
-          git tag servers-latest
-          git push origin servers-latest
 
       - name: Create GitHub release
         uses: softprops/action-gh-release@v1
