--- a/.github/workflows/server-release.yml
+++ b/.github/workflows/server-release.yml
@@ -16,7 +16,16 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Ensure GitHub CLI is installed
+      - name: Generate timestamp version
+        id: version
+        run: echo "tag=servers-$(date +'%Y.%m.%d.%H%M%S')" >> $GITHUB_OUTPUT
+
+      - name: Create servers.zip (tracked files only)
+        run: |
+          mkdir release
+          git ls-files localhost_servers | zip -@ release/servers.zip
+
+      - name: Install GitHub CLI
         run: |
           sudo apt update
           sudo apt install -y gh
@@ -25,17 +34,17 @@ jobs:
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
-      - name: Delete existing release if it exists
+      - name: Create new dated release
         run: |
-          gh release delete servers-latest -y || echo "No release to delete"
+          gh release create ${{ steps.version.outputs.tag }} release/servers.zip \
+            --title "Localhost Servers ${{ steps.version.outputs.tag }}" \
+            --notes "Current release of Neurite's localhost servers"
 
-      - name: Create servers.zip (tracked files only)
+      - name: Delete older servers-* releases (keep latest)
         run: |
-          mkdir release
-          git ls-files localhost_servers | zip -@ release/servers.zip
-
-      - name: Create new release
-        run: |
-          gh release create servers-latest release/servers.zip \
-            --title "Localhost Servers Latest" \
-            --notes "Latest release of localhost servers for Neurite"
+          gh release list --limit 100 --json tagName,createdAt \
+          | jq -r '.[] | select(.tagName | startswith("servers-")) | "\(.createdAt) \(.tagName)"' \
+          | sort -r \
+          | tail -n +2 \
+          | awk '{print $2}' \
+          | xargs -r -n 1 gh release delete -y
