--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -56,7 +56,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Write embedded version file
         run: |
