--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -69,17 +69,13 @@ jobs:
           echo "Draft? ${{ needs.set-version.outputs.draft }}"
           echo "Prerelease? ${{ needs.set-version.outputs.prerelease }}"
 
-  upload-assets:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
       - name: Upload release asset
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ needs.set-version.outputs.tag }}
-          name: Neurite Desktop ${{ needs.set-version.outputs.timestamp }}
+          name: Neurite Desktop ${{ env.RELEASE_VERSION }}
           body: |
-            Electron desktop release for version ${{ needs.set-version.outputs.timestamp }}.
+            Electron desktop release for version ${{ env.RELEASE_VERSION }}.
           draft: ${{ needs.set-version.outputs.draft }}
           prerelease: ${{ needs.set-version.outputs.prerelease }}
           files: |
@@ -90,7 +86,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   cleanup:
-    needs: upload-assets
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Install GitHub CLI
