--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
         "repo": "neurite"
       }
     ],
-    "mac": {
-      "category": "public.app-category.utilities",
-      "target": "dmg",
-      "icon": "build/icons/icon.icns"
-    },
+  "mac": {
+    "category": "public.app-category.utilities",
+    "target": "dmg",
+    "icon": "build/icons/icon.icns",
+    "arch": ["universal"]
+  },
     "win": {
       "target": "nsis",
       "icon": "build/icons/icon.ico"
