--- a/package.json
+++ b/package.json
@@ -41,12 +41,16 @@
         "repo": "neurite"
       }
     ],
-  "mac": {
-    "category": "public.app-category.utilities",
-    "target": "dmg",
-    "icon": "build/icons/icon.icns",
-    "arch": ["universal"]
-  },
+    "mac": {
+      "category": "public.app-category.utilities",
+      "target": [
+      {
+        "target": "dmg",
+        "arch": ["universal"]
+      }
+    ],
+    "icon": "build/icons/icon.icns"
+    },
     "win": {
       "target": "nsis",
       "icon": "build/icons/icon.ico"
