--- a/package.json
+++ b/package.json
@@ -44,12 +44,11 @@
     "mac": {
       "category": "public.app-category.utilities",
       "target": [
-      {
-        "target": "dmg",
-        "arch": ["universal"]
-      }
-    ],
-    "icon": "build/icons/icon.icns"
+        {
+          "target": "dmg"
+        }
+      ],
+      "icon": "build/icons/icon.icns"
     },
     "win": {
       "target": "nsis",
