--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -74,15 +74,38 @@ jobs:
           echo "Draft? ${{ needs.set-version.outputs.draft }}"
           echo "Prerelease? ${{ needs.set-version.outputs.prerelease }}"
 
-      - name: Upload release asset
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-${{ matrix.os }}
+          path: dist
+
+  release:
+    needs: [build, set-version]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: dist
+
+      - name: Create Release
+        id: create_release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ needs.set-version.outputs.tag }}
-          name: Neurite Desktop ${{ env.RELEASE_VERSION }}
+          name: Neurite Desktop ${{ needs.set-version.outputs.timestamp }}
           body: |
-            Electron desktop release for version ${{ env.RELEASE_VERSION }}.
+            Electron desktop release for version ${{ needs.set-version.outputs.timestamp }}.
           draft: ${{ needs.set-version.outputs.draft }}
           prerelease: ${{ needs.set-version.outputs.prerelease }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ needs.set-version.outputs.tag }}
           files: |
             dist/*.dmg
             dist/*.exe
@@ -91,7 +114,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   cleanup:
-    needs: build
+    needs: release
+    if: ${{ needs.set-version.outputs.draft == 'false' && needs.set-version.outputs.prerelease == 'false' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -112,7 +136,6 @@ jobs:
             | jq -r '.[] | select(.tagName | startswith("electron-")) | "\(.createdAt) \(.tagName)"' \
             | sort -r)
 
-          # Only delete if there are releases
           if [ -n "$releases" ]; then
             echo "$releases" | tail -n +2 | awk '{print $2}' | xargs -r -n 1 gh release delete -y
           else
