local frontend with updater
+ update, cache, and load Neurite's frontend from it's built file uploaded via github releases
+ proxy neurite.network for oauth / NeuriteBackend

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "adm-zip": "^0.5.16",
     "axios": "^1.7.9",
-    "tree-kill": "^1.2.2"
+    "tree-kill": "^1.2.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "electron": "^34.0.1",
