--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -86,7 +86,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   cleanup:
-    needs: build
+    needs:
+      - build
+      - set-version
+    if: needs.set-version.outputs.draft == 'false' && needs.set-version.outputs.prerelease == 'false'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -102,12 +105,10 @@ jobs:
 
       - name: Delete old electron-* releases (keep latest)
         run: |
-          # List releases, filter for 'electron-' tag, and delete all except the latest
           releases=$(gh release list --limit 100 --json tagName,createdAt \
             | jq -r '.[] | select(.tagName | startswith("electron-")) | "\(.createdAt) \(.tagName)"' \
             | sort -r)
 
-          # Only delete if there are releases
           if [ -n "$releases" ]; then
             echo "$releases" | tail -n +2 | awk '{print $2}' | xargs -r -n 1 gh release delete -y
           else
